# lib/api-spec/openapi.yaml
@@ -512,6 +512,12 @@ components:
           nullable: true
         price:
           type: number
+        halfPrice:
+          type: number
+          nullable: true
+        fullPrice:
+          type: number
+          nullable: true
         isVeg:
           type: boolean
         isAvailable:
@@ -547,6 +553,12 @@ components:
           nullable: true
         price:
           type: number
+        halfPrice:
+          type: number
+          nullable: true
+        fullPrice:
+          type: number
+          nullable: true
         isVeg:
           type: boolean
         isAvailable:
@@ -570,6 +582,12 @@ components:
           nullable: true
         price:
           type: number
+        halfPrice:
+          type: number
+          nullable: true
+        fullPrice:
+          type: number
+          nullable: true
         isVeg:
           type: boolean
         isAvailable:
